This file documents the revision history for the Monitoring Webinterface Thruk.

next:
          - Panorama View:
            - make text label size configurable
          - Config Tool:
            - fix tools changes not beeing saved

2.00-2   Fri Aug 28 16:19:25 CEST 2015
          - add cancel button to all external jobs
          - parse performance data with U(nknown) values
          - fix user password link when invoked from main page
          - fix logrotate missing su directive on logrotate > 3.8 (#471)
          - fix duplicate installed logrotate file (#511)
          - fix config file parser on escaped hashes (#505)
          - Reports:
            - add danish localization
          - Config Tool:
            - add generic text editor
            - fix problem when cloning commands
          - Panorama View:
            - fix initial text label position (#506)
            - fix corrupted tab export (#507)


2.00     Mon Jul 13 22:49:52 CEST 2015
          - add local settings config drop dir support via thruk_local.d/
          - changed internal storage format to json everywhere
          - improved memory usage
          - improved startup time
          - improved page rendering
          - users can change their htpasswd passwords
          - retry setting recurring downtimes in case of errors
          - fix redirect without trailing slash on login
          - fix event log filter for unprivileged contacts (#406)
          - fix shadownaemon using the livestatus wait feature
          - Panorama View:
            - default geo map center can be changed in config file
            - fix missing Sitename in services/host widgets
            - fix using spaces in command comments (#495)
          - Business Process:
            - fix using backslashes in business process object names (#485)
          - Reporting:
            - add new options to better use indexes and skip updating logcache (#464, Zirafarafa)

          Incompatible Changes: