@@ -3,6 +3,7 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
 next:
           - Panorama View:
             - make text label size configurable
+            - fix label zIndex positioning
           - Config Tool:
             - fix tools changes not beeing saved
 
